Fixed an alignment problem with the comments section

--- a/style.css
+++ b/style.css
@@ -15,6 +15,17 @@ left: 0;
 right: 0;
 margin: 0;
 }
+input[type=text]:area {
+    border: 2px solid;
+    padding: 20px; 
+    width: 300px;
+    resize: both;
+    overflow: auto;
+}
+input[type=submit] {
+    background-color:#F5F5F5;
+	width: 100;
+}
 ul.topnav {
 
   list-style-type: none;
@@ -128,6 +139,7 @@ ul.nav li.icon {display: none;}
 }
 a:link{
 	color: black;
+	text-decoration:none; 
 }
 a:visited{
 color: black;
@@ -206,7 +218,17 @@ div.post {
 	
 
 }
+div.comment {
+	
+    width: 200px;
+    padding: 25px;
+    border: 25px black;
+    margin: 25px;
 
+	
+	
+
+}
 
 input[type=text] {
     border-radius: 4px;
@@ -240,197 +262,3 @@ input[type=text]:focus {
 
 
 
-/* == WordPress WYSIWYG Editor Styles == */
-
-.entry-content img {
-	margin: 0 0 1.5em 0;
-	}
-.alignleft, img.alignleft {
-	margin-right: 1.5em;
-	display: inline;
-	float: left;
-	}
-.alignright, img.alignright {
-	margin-left: 1.5em;
-	display: inline;
-	float: right;
-	}
-.aligncenter, img.aligncenter {
-	margin-right: auto;
-	margin-left: auto;
-	display: block;
-	clear: both;
-	}
-.alignnone, img.alignnone {
-	/* not sure about this one */
-	}
-.wp-caption {
-	margin-bottom: 1.5em;
-	text-align: center;
-	padding-top: 5px;
-	}
-.wp-caption img {
-	border: 0 none;
-	padding: 0;
-	margin: 0;
-	}
-.wp-caption p.wp-caption-text {
-	line-height: 1.5;
-	font-size: 10px;
-	margin: 0;
-	}
-.wp-smiley {
-	margin: 0 !important;
-	max-height: 1em;
-	}
-blockquote.left {
-	margin-right: 20px;
-	text-align: right;
-	margin-left: 0;
-	width: 33%;
-	float: left;
-	}
-blockquote.right {
-	margin-left: 20px;
-	text-align: left;
-	margin-right: 0;
-	width: 33%;
-	float: right;
-	}
-.gallery dl {}
-.gallery dt {}
-.gallery dd {}
-.gallery dl a {}
-.gallery dl img {}
-.gallery-caption {}
-
-.size-full {}
-.size-large {}
-.size-medium {}
-.size-thumbnail {}
-
-  
- /* ## Comments
- * --------------------------------------------- */
-.comment-respond,
-.entry-pings,
-.entry-comments {
-    color: #444;
-    padding: 20px 45px 40px 45px;
-    border: 1px solid #ccc;
-    overflow: hidden;
- /*   background: #fff;*/
-    -webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
-    box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
-    border-left: 4px solid #444;
-}
-
-
-.entry-comments h3{
-    font-size: 30px;
-    margin-bottom: 30px;
-}
-.comment-respond h3,
-.entry-pings h3{
-	font-size: 20px;
-	margin-bottom: 30px;
-}
- 
-.comment-respond {
-	padding-bottom: 5%;
-	padding-left: 8%;
-	margin: 20px 1px 30px 1px;
-        border-left: none !important;
-	background-color:#F0F0F0 ;
-}
-.comment-header {
-	color: #adaeb3;
-	font-size: 14px;
-	margin-bottom: 20px;
-}
-.comment-header cite a {
-	border: none;
-	font-style: normal;
-	font-size: 16px;
-	font-weight: bold;
-}
-.comment-header .comment-meta a {
-	border: none;
-	color: #adaeb3;
-	text-decoration:none;
-}
-li.comment {
-	
-	border-right: none;
-}
-.comment-content {
-	clear: both;
-	overflow: hidden;
-}
-.comment-list li {
-	font-size: 14px;
-	padding: 20px 30px 20px 50px;
-}
-.comment-list .children {
-	margin-top: 40px;
-	border: 1px solid #ccc;
-}
-.comment-list li li {
-	background-color: #f5f5f6;
-}
-.comment-list li li li {
-/*	background-color: #fff;*/
-}
-.comment-respond input[type="email"],
-.comment-respond input[type="text"],
-.comment-respond input[type="url"] {
-	width: 50%;
-}
-.comment-respond label {
-	display: block;
-	margin-right: 12px;
-}
-.entry-comments .comment-author {
-	margin-bottom: 0;
-	position: relative;
-}
-.entry-comments .comment-author img {
-	border-radius: 50%;
-	border: 5px solid #fff;
-	left: -80px;
-	top: -5px;
-	position: absolute;
-	width: 60px;
-}
-.entry-pings .reply {
-	display: none;
-}
-.bypostauthor {
-}
-.form-allowed-tags {
-	background-color: #f5f5f5;
-	font-size: 16px;
-	padding: 24px;
-}
-
-.comment-reply-link{
-    cursor: pointer;
-    background-color: #444;
-    border: none;
-    border-radius: 3px;
-    color: #fff;
-    font-size: 12px;
-    font-weight: 300;
-    letter-spacing: 1px;
-    padding: 4px 10px 4px;
-    text-transform: uppercase;
-    width: auto;
-	text-decoration:none;
-}
-.comment-reply-link:hover{
-    color: #fff;
-}
-.comment-notes{
-    display:none;   
-} 
